samples/_failures_safe/1761344002_97f3d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8347962.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a8347962.c:180:9: error: expected expression at end of input
  180 |         for (
      |         ^~~
./samples/SAFE/__tmp_a8347962.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8347962.c:180:9: error: expected declaration or statement at end of input
